# PolynomialRootFinding

./: .gitignore  CMakeLists.txt  Makefile  NewtonTest.txt  README.md  valid.py  valid.sh
data/: random_poly.txt  random_poly_backup.txt  random_poly_sol.txt  random_poly_sol_backup.txt  test.poly  test_backup.poly
include/: Budan.h  Param.h  Poly.h  Test.h  Util.h  a.out  bisect.h  budan.h  coef.h  isolate.h  param.h  parse.h  poly.h  test.h  tmp.cpp  util.cpp  util.h  vincent.h
report/: 010abstract.tex  020introduction.tex  020problem.tex  030previous.tex  030squarefree.tex  040budan.tex  040data.tex  040methodology.fdb_latexmk  040methodology.fls  040methodology.tex  050contributions.tex  050implementation.tex  050vincent.tex  060analysis.tex  060conclusion.fdb_latexmk  060conclusion.fls  070conclusion.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  pre_script.md  references.bib  report.tex  sample-acmsmall.aux  sample-acmsmall.bbl  sample-acmsmall.blg  sample-acmsmall.fdb_latexmk  sample-acmsmall.fls  sample-acmsmall.out  sample-acmsmall.tex  sample-base.bib
src/: Budan.cpp  Poly.cpp  Test.cpp  Util.cpp  a.out  bisect.cpp  boundry.h  budan.cpp  budan.h  budan_backup.h  budan_backup2.h  compile_commands.json  index.md  interval.h  isolate.cpp  main.cpp  param.h  parse.cpp  parse.h  poly.cpp  poly.h  poly_backup.h  poly_double.h  random_poly.txt  randompoly.h  range.h  test.poly  test2.poly  test_poly.cpp  test_util.cpp  testfunction.h  timetest.cpp  tmp.cpp  tylortest.cpp  util.cpp  util.h  util_backup.cpp  util_backup.h  (+4 more)
(+680 files in other folders)
